# beka_project

./: .env.example  Makefile  dockerfile  manager.py  pyproject.toml
common/: chatgpt.py
core/: router.py
core/handlers/: file.py
docker_compose/: app.yaml
files/: Задание 1 test-tasks-common.txt
services/: chatgpt.py  file.py
